--- a/mbone/vat/Makefile
+++ b/mbone/vat/Makefile
@@ -14,11 +14,7 @@ DISTFILES=	vatsrc-4.0b2.tar.gz
 MAINTAINER=	fenner@FreeBSD.ORG
 
 GSM_DIR=	${PORTSDIR}/audio/gsm
-.if defined(OBJMACHINE)
-GSM_WORK=	${GSM_DIR}/work.${ARCH}/gsm-1.0-pl10
-.else
-GSM_WORK=	${GSM_DIR}/work/gsm-1.0-pl10
-.endif
+GSM_WORK=	${GSM_DIR}/${WRKDIR:T}/gsm-1.0-pl10
 
 # If configure is changed to look for libgsm.a in ${PREFIX}/lib, then
 # we can use this first BUILD_DEPENDS and save some work.
