--- a/shells/bash2/Makefile
+++ b/shells/bash2/Makefile
@@ -3,7 +3,7 @@
 # Date created:		21 August 1994
 # Whom:			jkh
 #
-# $NetBSD: Makefile,v 1.2 1998/01/01 05:00:02 hubertf Exp $
+# $NetBSD: Makefile,v 1.3 1998/01/20 23:28:25 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.26 1997/06/27 23:03:27 ache Exp 
 #
 
@@ -17,6 +17,8 @@ DISTFILES=      bash-2.01.tar.gz bash-doc-2.01.tar.gz
 
 MAINTAINER=	ache@FreeBSD.ORG
 
+BUILD_DEPENDS=  ${PREFIX}/bin/install-info:${PORTSDIR}/devel/gtexinfo
+RUN_DEPENDS=    ${PREFIX}/bin/install-info:${PORTSDIR}/devel/gtexinfo
 GNU_CONFIGURE=	Yes
 MAN1=		bash.1 bashbug.1
 
