--- a/security/ssh/Makefile
+++ b/security/ssh/Makefile
@@ -3,15 +3,16 @@
 # Date created:				19971214
 # Whom:					hubertf@netbsd.org
 #
-# $NetBSD: Makefile,v 1.5 1998/01/18 20:07:43 kleink Exp $
+# $NetBSD: Makefile,v 1.6 1998/01/22 07:48:11 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.47 1997/11/10 22:04:42 dima Exp
 #
 # Maximal ssh package requires a YES value for USE_PERL.
 #
 
-DISTNAME=       ssh-1.2.21
+DISTNAME=       ssh-1.2.22
 CATEGORIES=	security net
-MASTER_SITES=   ftp://ftp.funet.fi/pub/unix/security/login/ssh/
+MASTER_SITES=   ftp://ftp.cs.hut.fi/pub/ssh/ \
+		ftp://ftp.funet.fi/pub/unix/security/login/ssh/
 
 MAINTAINER=	mrg@eterna.com.au
 
@@ -36,7 +37,8 @@ IS_INTERACTIVE=	YES
 
 GNU_CONFIGURE=	YES
 
-CONFIGURE_ARGS+= --prefix=${PREFIX} --with-etcdir=/etc --with-libwrap
+CONFIGURE_ARGS+= --prefix=${PREFIX} --with-etcdir=/etc --with-libwrap \
+			--disable-suid-ssh
 
 #Uncomment if all your users are in their own group and their homedir
 #is writeable by that group.  Beware the security implications!
