--- a/graphics/pixmap/Makefile
+++ b/graphics/pixmap/Makefile
@@ -3,7 +3,8 @@
 # Date created:		19 February 1995
 # Whom:			jmz
 #
-# $Id: Makefile,v 1.1.1.1 1998/01/23 11:24:57 bouyer Exp $
+# $NetBSD: Makefile,v 1.2 1998/01/23 11:41:14 bouyer Exp $
+# FreeBSD: Makefile,v 1.8 1996/11/18 09:53:36 asami Exp
 #
 
 DISTNAME=	pixmap2.6
@@ -18,5 +19,6 @@ LIB_DEPENDS=	Xpm\\.4\\.:${PORTSDIR}/graphics/xpm
 
 WRKSRC=		${WRKDIR}/pixmap
 USE_IMAKE=	yes
+CAT1=    pixmap.0
 
 .include <bsd.port.mk>
