--- a/editors/vile/Makefile
+++ b/editors/vile/Makefile
@@ -3,13 +3,12 @@
 # Date created:         		Wed Nov 26, 1996
 # Whom:                 		pgf
 #
-# $NetBSD: Makefile,v 1.3 1997/12/19 09:50:07 agc Exp $
+# $NetBSD: Makefile,v 1.4 1998/01/24 04:53:06 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.13 1997/09/06 19:55:09 gj Exp
 #
 
 DISTNAME=	vile
 PKGNAME=	vile-7.3
-WRKSRC=		${WRKDIR}/${PKGNAME}
 CATEGORIES=	editors
 MASTER_SITES=   ftp://ftp.clark.net/pub/dickey/vile/ \
 		ftp://id.wing.net/pub/pgf/vile/
@@ -18,6 +17,7 @@ MAINTAINER=	gj@freebsd.org
 
 MAKEFILE=	makefile
 GNU_CONFIGURE=	yes
+WRKSRC=		${WRKDIR}/${PKGNAME}
 MAN1=		vile.1
 
 post-install:
